--- a/app/config.toml
+++ b/app/config.toml
@@ -12,8 +12,9 @@
 "transaction" = "merchant/retail_transaction_api.html"
 "loyalty_card_management" = "events/loyalty_card_management/async/index.html"
 "reporting_mi" = "events/reporting_mi/async/index.html"
+"user_and_wallet" = "events/user_and_wallet/async/index.html"
 "events" = "events/index.html"
-#"transaction_processing" = "events/transaction_processing/async/index.html"
-
+"transaction_processing" = "events/transaction_processing/async/index.html"
+"bpl_events" = "events/bpl_events/async/index.html"
 "appendix" = "extras/appendix.html"
 "changelog" = "extras/changelog.html"
