--- a/events/reporting_mi/asyncapi.yaml
+++ b/events/reporting_mi/asyncapi.yaml
@@ -22,6 +22,10 @@ channels:
         $ref: '#/components/messages/UserDeletedAPI'
       user.session.start:
         $ref: '#/components/messages/UserSessionStart'
+      user.RTBF:
+        $ref: '#/components/messages/UserRTBFRequest'
+      user.closure:
+        $ref: '#/components/messages/UserClosureRequest'
       lc.addandauth.request:
         $ref: '#/components/messages/LoyaltyCardAddAndAuthRequest'
       lc.addandauth.success:
@@ -60,10 +64,6 @@ channels:
         $ref: '#/components/messages/TransactionExport'
       transaction.exported.response:
         $ref: '#/components/messages/TransactionExportResponse'
-      user.RTBF:
-        $ref: '#/components/messages/UserRTBFRequest'
-      user.closure:
-        $ref: '#/components/messages/UserClosureRequest'
 operations:
   user.created:
     action: receive
@@ -83,6 +83,18 @@ operations:
       $ref: '#/channels/clickhouse_hermes' 
     messages:
       - $ref: '#/channels/clickhouse_hermes/messages/user.session.start'
+  user.RTBF:
+    action: receive
+    channel:
+      $ref: '#/channels/clickhouse_hermes' 
+      messages:
+        - $ref: '#/channels/clickhouse_hermes/messages/user.RTBF'      
+  user.closure:
+    action: receive
+    channel:
+      $ref: '#/channels/clickhouse_hermes' 
+      messages:
+        - $ref: '#/channels/clickhouse_hermes/messages/user.closure'
   lc.addandauth.request:
     action: receive
     channel:
@@ -197,18 +209,6 @@ operations:
       $ref: '#/channels/clickhouse_hermes' 
       messages:
         - $ref: '#/channels/clickhouse_hermes/messages/transaction.exported.response'
-  user.RTBF:
-    action: receive
-    channel:
-      $ref: '#/channels/clickhouse_hermes' 
-      messages:
-        - $ref: '#/channels/clickhouse_hermes/messages/user.RTBF'      
-  user.closure:
-    action: receive
-    channel:
-      $ref: '#/channels/clickhouse_hermes' 
-      messages:
-        - $ref: '#/channels/clickhouse_hermes/messages/user.closure'
 components:
   messages:
     UserCreated:
@@ -405,10 +405,11 @@ components:
         example:
           event_type: "user.RTBF"
           event_date_time: "2023-12-12 12:57:01.242389"
-          internal_user_ref: "12345"
+          internal_user_ref: 12345
           scheme_account_ids: ["1234567890", "1234567891"]
           payment_card_account_ids: ["1234567890", "1234567891"]
-          django_user_id: "email@domain.com"
+          requesting_user_id: 12345
+          requesting_user_email: "email@domain.com"
     UserClosureRequest:
       name: User Closure Request
       title: User Closure Request
@@ -420,10 +421,11 @@ components:
         example:
           event_type: "user.closure"
           event_date_time: "2023-12-12 12:57:01.242389"
-          internal_user_ref: "12345"
+          internal_user_ref: 76543
           scheme_account_ids: ["1234567890", "1234567891"]
           payment_card_account_ids: ["1234567890", "1234567891"]
-          django_user_id: "mail@domain.com"        
+          requesting_user_id: 12345
+          requesting_user_email: "email@domain.com"
   schemas:
     Metadata:
       allOf:
@@ -632,8 +634,8 @@ components:
     RTBFRequest:
       properties: 
         internal_user_ref:
-          type: string
-          example: "12345"
+          type: number
+          example: 12345
           description: "Database user ID (not UUID)"
         scheme_account_ids:
           type: array
@@ -647,7 +649,11 @@ components:
             type: string
           description: "The payment card account identifiers"
           example: ["1234567890", "1234567891"]
-        django_user_id:
+        requesting_user_id:
+          type: number
+          example: 12345
+          description: "User ID for initiating system or collague who initiated the RTBF action"
+        requesting_user_email:
           type: string
-          example: "email@domain.com,12345"
-          description: "User ID for operator who ran the RTBF action"
+          example: "email@domain.com"
+          description: "Email address of the user who initiated the RTBF action"
